# gnome-randr-rust

./: Cargo.toml  LICENSE  PR.md  README.md  backlog-methodology.md  tutorial.md
docs/addressed/notes/: 0000_align_native_surface_with_gdctl_routing.md  0000_xrandr_capability_parity_routing.md  0009_Allow_reading_a_config_file.md  0010_publish_gdctl_compatibility_matrix_and_divergence_policy.md  0010_reconcile_recent_work_with_the_backlog_and_publish_a_parity_matrix.md  0012_Allow_dumping_the_current_configuration_to_stdout.md  0013_Add_an__--off__flag.md  0016_Feature_request__set_brightness.md  0018_Add_XY_movement___refactor_monitor_types.md  0020__Feature_Request___Mirroring_config.md  0020_accept_displayed_scale_values_when_matching_supported_scales.md  0020_add_non_breaking_gdctl_command_and_flag_aliases.md  0021__Feature_Request___Add_capability_to_turn_off_screen_and_set.md  0024_Installation.md  0026__--scale__requires_more_precision_than_is_displayed.md  0027_when_try_to_rotate_left_or_right_encounter_error_D-Bus_error.md  0028_Can_t_change_mode.md  0030__Feature_Request__Allow_to_save_and_load_configs__like_autor.md  0030_add_preferred_auto_refresh_and_noprimary_to_modify.md  0030_extend_remaining_gdctl_monitor_control_parity.md  0040_add_for_lease_monitor_support_or_reroute_it.md  0040_add_richer_query_views_and_property_inspection.md  (+9 more)
src/cli/: apply.rs  brightness.rs  common.rs  complete.rs  completions.rs  mod.rs  monitors_xml.rs  query.rs
src/cli/modify/: mod.rs  (+1 more)
src/display_config/: logical_monitor.rs  mod.rs  proxied_methods.rs  raw.rs  resources.rs
(+30 files in other folders)
