[package]
name = "gnome-randr"
edition = "2018"
version = "0.1.1"
authors = ["savedbythezsh <savedbythezsh@gmail.com>"]
license = "MIT"
description = "A reimplementation of xrandr for Gnome on Wayland"
readme = "README.md"
homepage = "https://github.com/maxwellainatchi/gnome-randr-rust"
repository = "https://github.com/maxwellainatchi/gnome-randr-rust"
keywords = ["cli", "displays", "xrandr", "gnome", "wayland"]
categories = ["command-line-utilities", "config"]

[dependencies]
dbus = "0.9.10"
bitflags = "2.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.26"
